# WSC3D

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
ai-service/: .gitignore  README.md  pyproject.toml  requirements-cu128.txt  requirements.txt
ai-service/app/: canny.py  main.py  mask_ops.py  quality.py  resources.py  sam.py  sam3_service.py  schemas.py  utils.py  yolo.py
ai-service/app/routers/: __init__.py  health.py  imagery.py  inference.py  lineart.py
ai-service/scripts/: setup-sam3.ps1
backend/: tsconfig.json
backend/src/: server.ts  types.ts
backend/src/domain/: han-stone.ts
backend/src/parsers/: markdownParser.ts
backend/src/routes/: assembly.ts  catalog.ts  iiml.ts  kb.ts  pic.ts  resources.ts  training.ts
backend/src/scripts/: migrate-iiml-anchor.ts  migrate-iiml-frame.ts  scan.ts  seed-kb.ts
backend/src/services/: anchor.ts  assembly-plans.ts  catalog-override.ts  catalog.ts  homography.ts  hpsml.ts  iiml.ts  pic-bindings.ts  pic-catalog.ts  pic.ts  preflight.ts  stone-resources.ts  training-annotation-meta.ts  training-export.ts  (+1 more)
data/: catalog.override.json  pic-bindings.json  terms.json
data/knowledge/: categories.json  concepts.json  terms.json
docs/: P0_SCAN_REPORT.md  P2_ASSEMBLY.md  PROJECT_BRIEF.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.2.2.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.7.0.md  RELEASE_NOTES_v0.8.0.md  RELEASE_NOTES_v0.9.0.md  ROADMAP.md  TECH_STACK.md  THINKING_m2.md  THINKING_m5.md  WORK_LOG_post_v0.4.0.md  WORK_LOG_post_v0.5.0.md  WORK_LOG_post_v0.6.0.md  WORK_LOG_post_v0.7.0.md  WORK_LOG_sam3_training_pool_2026-05-08.md  WORK_LOG_v0.9_reinforcement_2026-07-01.md  han-stone-annotation-SOP.md
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
(+147 files in other folders)
